src/objects/Apttus_Approval__Backup_Approver__c.object
<CustomObject>
    <description>Allows approvers and administrators to specify backup approvers.  There is an option to transfer all pending request from and to the approver and the backup approver upon activation or cancellation of backups.  The approvals engine automatically routes requests to backup approvers when this is in effect.</description>
    <fields>
        <fullName>Apttus_Approval__Backup_Action__c</fullName>
        <description>Backup action</description>
        <formula>IF(NOT(Apttus_Approval__InEffect__c), HYPERLINK(&quot;/apex/Apttus_Approval__BackupApproverAction?approverId=&quot; &amp;Apttus_Approval__Current_User__c &amp; &quot;&amp;backupApproverAction=activate&quot;, IMAGE(&quot;/resource/Apttus_Approval__Button_Activate&quot;, &quot;Activate Backup&quot;), &quot;_self&quot;), IF(AND(Apttus_Approval__InEffect__c,Apttus_Approval__IsActive__c), HYPERLINK(&quot;/apex/Apttus_Approval__BackupApproverAction?approverId=&quot; &amp;Apttus_Approval__Current_User__c &amp; &quot;&amp;backupApproverAction=deactivate&quot;, IMAGE(&quot;/resource/Apttus_Approval__Button_Deactivate&quot;, &quot;Deactivate Backup&quot;), &quot;_self&quot;), &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Action to activate or deactivate the backup</inlineHelpText>
        <label>Backup/Delegate Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Backup_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The backup/delegate user for the current user.</description>
        <label>Backup/Delegate User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028l1cEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Cancellation_Date__c</fullName>
        <description>The date on which approval requests will stop getting assigned to the backup/delegate.</description>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Comment__c</fullName>
        <description>Enter a comment to the person you are setting as your backup/delegate.</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Current_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who for whom the backup or delegate approver applies.</description>
        <label>Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028l1fEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DelegateUserIds__c</fullName>
        <description>IDs of approvers who are designated as delegates of the current user.</description>
        <inlineHelpText>IDs of approvers who were designated as Delegate of Backup</inlineHelpText>
        <label>Delegate Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Effective_Date__c</fullName>
        <description>Please enter an effective date only if you are not activating it immediately. Otherwise use the Activate button to activate the backup/delegate approver immediately.</description>
        <inlineHelpText>Please enter an effective date only if you are not activating it immediately. Otherwise use the Activate button on the next screen to Activate Backup immediately.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Expiration_Date__c</fullName>
        <description>Please enter an expiration date only if you need the system to expire it automatically at a future date. Otherwise use the Deactivate button to cancel the backup/delegate immediately.</description>
        <inlineHelpText>Please enter an expiration date only if you need the system to expire it automatically at a future date. Otherwise use the Deactivate button on the next screen to cancel the backup immediately</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__InEffect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this means this backup/delegate is in effect.  A backup/delegate can be active, in effect, or both.  In order for requests to be actively assigned to the backup/delegate they must be active and in effect.</description>
        <label>In Effect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked this means this backup/delegate is active but not necessarily in effect.  A backup/delegate can be active, in effect, or both.  In order for requests to be actively assigned to the backup/delegate they must be active and in effect.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsDelegate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, requests assigned to the current user get assigned to the backup instead.  When checked, requests assigned to the current user remain assigned to them but their delegates are notified and can take action on the requests as well.</description>
        <inlineHelpText>Indicates that the this entry is for delegate user.</inlineHelpText>
        <label>Is Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SuppressDelegateNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to enable/disable notification to Delegate Approver.</description>
        <inlineHelpText>Indicator to enable/disable notification to Delegate Approver</inlineHelpText>
        <label>Suppress Delegate Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Transfer_in_flight__c</fullName>
        <defaultValue>true</defaultValue>
        <description>All in-flight and pending approval requests will be directed to the person designated as backup/delegate.</description>
        <label>Transfer in-flight</label>
        <type>Checkbox</type>
    </fields>
    <label>Backup/Delegate Approver</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__IsActive__c</columns>
        <columns>Apttus_Approval__InEffect__c</columns>
        <columns>Apttus_Approval__Transfer_in_flight__c</columns>
        <columns>Apttus_Approval__Current_User__c</columns>
        <columns>Apttus_Approval__Backup_User__c</columns>
        <columns>Apttus_Approval__Effective_Date__c</columns>
        <columns>Apttus_Approval__Expiration_Date__c</columns>
        <columns>Apttus_Approval__Cancellation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BU-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backup/Delegate Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>